--- a/waiter/resources/log4j.properties
+++ b/waiter/resources/log4j.properties
@@ -1,11 +1,11 @@
 # suppress inspection "UnusedProperty" for whole file
-log4j.rootLogger=INFO, InfoAppender, ErrorAppender
+log4j.rootLogger=DEBUG, InfoAppender, ErrorAppender
 
 log4j.category.waiter=INFO
 
 log4j.appender.InfoAppender=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.InfoAppender.Threshold=INFO
-log4j.appender.InfoAppender.File=log/${waiter.logFilePrefix}waiter.log
+log4j.appender.InfoAppender.Threshold=DEBUG
+log4j.appender.InfoAppender.File=log/${waiter.logFilePrefix}waiter-502.log
 log4j.appender.InfoAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.InfoAppender.layout=org.apache.log4j.PatternLayout
 # CID will be replaced by the custom pattern layout configured in waiter.correlation-id/replace-pattern-layout-in-log4j-appenders
@@ -13,7 +13,7 @@ log4j.appender.InfoAppender.layout.ConversionPattern=%d{ISO8601} %-5p %c [%t] - 
 
 log4j.appender.ErrorAppender=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.ErrorAppender.Threshold=ERROR
-log4j.appender.ErrorAppender.File=log/${waiter.logFilePrefix}waiter-error.log
+log4j.appender.ErrorAppender.File=log/${waiter.logFilePrefix}waiter-error-502.log
 log4j.appender.ErrorAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.ErrorAppender.layout=org.apache.log4j.PatternLayout
 # CID will be replaced by the custom pattern layout configured in waiter.correlation-id/replace-pattern-layout-in-log4j-appenders
@@ -24,7 +24,7 @@ log4j.additivity.RequestLog=false
 
 log4j.appender.RequestLogAppender=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.RequestLogAppender.Threshold=INFO
-log4j.appender.RequestLogAppender.File=log/${waiter.logFilePrefix}request.log
+log4j.appender.RequestLogAppender.File=log/${waiter.logFilePrefix}request-502.log
 log4j.appender.RequestLogAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.RequestLogAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.RequestLogAppender.layout.ConversionPattern=%m%n
@@ -34,7 +34,9 @@ log4j.additivity.Scheduler=false
 
 log4j.appender.SchedulerAppender=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.SchedulerAppender.Threshold=DEBUG
-log4j.appender.SchedulerAppender.File=log/${waiter.logFilePrefix}scheduler.log
+log4j.appender.SchedulerAppender.File=log/${waiter.logFilePrefix}scheduler-502.log
 log4j.appender.SchedulerAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.SchedulerAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.SchedulerAppender.layout.ConversionPattern=%d{ISO8601} %-5p %c [%t] - [CID] %m%n
+
+log4j.logger.org.eclipse.jetty=DEBUG
