--- a/waiter/resources/log4j-test.properties
+++ b/waiter/resources/log4j-test.properties
@@ -20,6 +20,7 @@ log4j.logger.org.eclipse.jetty.client.HttpContent=INFO
 log4j.logger.org.eclipse.jetty.client.HttpReceiver=DEBUG
 log4j.logger.org.eclipse.jetty.client.HttpSender=DEBUG
 log4j.logger.org.eclipse.jetty.client.http=DEBUG
+log4j.logger.org.eclipse.jetty.client.http.HttpReceiverOverHTTP=INFO
 log4j.logger.org.eclipse.jetty.http=DEBUG
 log4j.logger.org.eclipse.jetty.http.HttpGenerator=DEBUG
 log4j.logger.org.eclipse.jetty.http.HttpParser=DEBUG
