--- a/waiter/resources/log4j.properties
+++ b/waiter/resources/log4j.properties
@@ -43,7 +43,7 @@ log4j.category.InstanceTracker=INFO, InstanceAppender
 log4j.additivity.InstanceTracker=false
 
 log4j.appender.InstanceAppender=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.InstanceAppender.Threshold=DEBUG
+log4j.appender.InstanceAppender.Threshold=INFO
 log4j.appender.InstanceAppender.File=log/${waiter.logFilePrefix}instance.log
 log4j.appender.InstanceAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.InstanceAppender.layout=org.apache.log4j.PatternLayout
