--- a/containers/reverse-proxy/Dockerfile
+++ b/containers/reverse-proxy/Dockerfile
@@ -1,6 +1,7 @@
 FROM envoyproxy/envoy-alpine:v1.14.4
 
 COPY envoy-start /opt/waiter/envoy/bin/
+COPY envoy.yaml /etc/envoy/
 
 RUN chmod +x /opt/waiter/envoy/bin/envoy-start
 ENTRYPOINT /opt/waiter/envoy/bin/envoy-start
