feedback from shams

--- a/containers/reverse-proxy/envoy-one-port.yaml
+++ b/containers/reverse-proxy/envoy-one-port.yaml
@@ -3,7 +3,7 @@ static_resources:
     - address:
         socket_address:
           address: 0.0.0.0
-          port_value: {{PROXY_APP_PORT}}
+          port_value: {{PROXY_SERVICE_PORT}}
       filter_chains:
         - filters:
             - name: envoy.http_connection_manager
@@ -35,6 +35,7 @@ static_resources:
       connect_timeout: 1s
       type: static
       dns_lookup_family: V4_ONLY
+      http2_protocol_options: {}
       lb_policy: round_robin
       load_assignment:
         cluster_name: waiter-app
@@ -44,7 +45,7 @@ static_resources:
                   address:
                     socket_address:
                       address: 127.0.0.1
-                      port_value: {{APP_PORT}}
+                      port_value: {{SERVICE_PORT}}
 admin:
   access_log_path: "/dev/stdout"
   address:
