--- a/containers/reverse-proxy/envoy-one-port.yaml
+++ b/containers/reverse-proxy/envoy-one-port.yaml
@@ -30,6 +30,7 @@ static_resources:
                 http_filters:
                   - name: envoy.router
                     typed_config: {}
+                server_header_transformation: PASS_THROUGH
   clusters:
     - name: waiter-app
       connect_timeout: 1s
