--- a/containers/reverse-proxy/Dockerfile
+++ b/containers/reverse-proxy/Dockerfile
@@ -1,7 +1,8 @@
 FROM envoyproxy/envoy-alpine:v1.14.4
 
 COPY envoy-start /opt/waiter/envoy/bin/
-COPY envoy.yaml /etc/envoy/
+COPY envoy-one-port.yaml /etc/envoy/
+COPY envoy-two-ports.yaml /etc/envoy/
 
 
 ENTRYPOINT /opt/waiter/envoy/bin/envoy-start
