--- a/containers/reverse-proxy/envoy-one-port.yaml
+++ b/containers/reverse-proxy/envoy-one-port.yaml
@@ -3,23 +3,23 @@ static_resources:
     - address:
         socket_address:
           address: 0.0.0.0
-          port_value: SERVICE_PORT
+          port_value: {{PROXY_SERVICE_PORT}}
       filter_chains:
         - filters:
             - name: envoy.http_connection_manager
               typed_config:
                 "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                 codec_type: auto
-                stat_prefix: http
+                stat_prefix: app
                 access_log:
                   name: envoy.file_access_log
                   typed_config:
                     "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
                     path: /dev/stdout
                 route_config:
-                  name: reverse-proxy
+                  name: app-proxy
                   virtual_hosts:
-                    - name: backend
+                    - name: app-backend
                       domains:
                         - "*"
                       routes:
@@ -30,11 +30,13 @@ static_resources:
                 http_filters:
                   - name: envoy.router
                     typed_config: {}
+                server_header_transformation: PASS_THROUGH
   clusters:
     - name: waiter-app
       connect_timeout: 1s
-      type: logical_dns
+      type: static
       dns_lookup_family: V4_ONLY
+      http2_protocol_options: {}
       lb_policy: round_robin
       load_assignment:
         cluster_name: waiter-app
@@ -43,8 +45,8 @@ static_resources:
               - endpoint:
                   address:
                     socket_address:
-                      address: 0.0.0.0
-                      port_value: PORT0
+                      address: 127.0.0.1
+                      port_value: {{SERVICE_PORT}}
 admin:
   access_log_path: "/dev/stdout"
   address:
