--- a/waiter/resources/log4j.properties
+++ b/waiter/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.rootLogger=INFO, InfoAppender, ErrorAppender
 log4j.category.waiter=INFO
 
 log4j.appender.InfoAppender=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.InfoAppender.Threshold=INFO
+log4j.appender.InfoAppender.Threshold=DEBUG
 log4j.appender.InfoAppender.File=log/${waiter.logFilePrefix}waiter.log
 log4j.appender.InfoAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.InfoAppender.layout=org.apache.log4j.PatternLayout
@@ -29,11 +29,11 @@ log4j.appender.RequestLogAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.RequestLogAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.RequestLogAppender.layout.ConversionPattern=%m%n
 
-log4j.category.Scheduler=DEBUG, InfoAppender, ErrorAppender, SchedulerAppender
+log4j.category.Scheduler=INFO, InfoAppender, ErrorAppender, SchedulerAppender
 log4j.additivity.Scheduler=false
 
 log4j.appender.SchedulerAppender=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.SchedulerAppender.Threshold=DEBUG
+log4j.appender.SchedulerAppender.Threshold=INFO
 log4j.appender.SchedulerAppender.File=log/${waiter.logFilePrefix}scheduler.log
 log4j.appender.SchedulerAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.SchedulerAppender.layout=org.apache.log4j.PatternLayout
@@ -48,3 +48,21 @@ log4j.appender.InstanceAppender.File=log/${waiter.logFilePrefix}instance.log
 log4j.appender.InstanceAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.InstanceAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.InstanceAppender.layout.ConversionPattern=%m%n
+
+log4j.logger.org.apache=INFO
+log4j.logger.org.eclipse.jetty.client=DEBUG
+log4j.logger.org.eclipse.jetty.client.http=DEBUG
+log4j.logger.org.eclipse.jetty.client.http.HttpReceiverOverHTTP=DEBUG
+log4j.logger.org.eclipse.jetty.client.HttpExchange=DEBUG
+log4j.logger.org.eclipse.jetty.client.HttpContent=DEBUG
+log4j.logger.org.eclipse.jetty.client.HttpReceiver=DEBUG
+log4j.logger.org.eclipse.jetty.http=DEBUG
+log4j.logger.org.eclipse.jetty.http2.client=DEBUG
+log4j.logger.org.eclipse.jetty.http2.client.http=DEBUG
+log4j.logger.org.eclipse.jetty.http2.client.http.HttpReceiverOverHTTP2=DEBUG
+log4j.logger.org.eclipse.jetty.io=DEBUG
+log4j.logger.org.eclipse.jetty.io.ManagedSelector=INFO
+log4j.logger.org.eclipse.jetty.io.WriteFlusher=INFO
+log4j.logger.org.eclipse.jetty.io.ssl.SslConnection=DEBUG
+log4j.logger.org.eclipse.jetty.util.ssl=INFO
+log4j.logger.waiter.process-request=DEBUG
