--- a/.github/workflows/token-syncer.yml
+++ b/.github/workflows/token-syncer.yml
@@ -1,12 +1,14 @@
 name: 'Waiter token-syncer tests'
 
 on:
-  push:
-    branches:
-      - master
   pull_request:
     branches:
       - master
+  push:
+    branches:
+      - master
+  schedule:
+    - cron: '0 0 * * *'
 
 jobs:
   test:
